<resources>
    <string name="app_name">Multinox</string>
    <string name="title_home">Home</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_list">List</string>
    <string name="bluetooth_devices">Available Devices</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="title_activity_main">Multinox</string>
    <string name="title_activity_bluetooth">Bluetooth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Multinox</string>
    <string name="nav_header_subtitle">Device:</string>
    <string name="nav_header_subtitle_not_connected">Not connected to any device!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_expert">Expert</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_title_preferences">Preferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="diagnostics_progress">Testing cable...</string>

    <!-- Preference Titles -->
    <string name="mode_header">Mode</string>
    <string name="device_header">Device</string>

    <!-- Mode Preferences -->
    <string name="art_net">Art-Net</string>
    <string name="art_net_summary_on">Turn off to switch to DMX512</string>
    <string name="art_net_summary_off">Turn on to switch to Art-Net</string>
    <string name="art_net_ip">IP adress for Art-Net</string>

    <!-- Device Preferences -->
    <string name="device_display">Display</string>

    <string name="start_diagnostics">Start diagnose</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
