<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory
            app:title="@string/mode_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="reply"
                app:title="@string/reply_title"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:defaultValue="reply"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>-->

    <PreferenceCategory
            app:title="@string/mode_header">

        <SwitchPreferenceCompat
                app:key="art_net"
                app:title="@string/art_net"
                app:summaryOn="@string/art_net_summary_on"
                app:summaryOff="@string/art_net_summary_off"/>

        <EditTextPreference
                app:key="ip_adress"
                app:title="@string/art_net_ip"
                app:dependency="art_net"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/device_header">

        <SwitchPreferenceCompat
                app:defaultValue="true"
            app:key="device_display"
            app:title="@string/device_display"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
